@@ -1,3 +1,6 @@
+20211025 - Gnoga V1.7-alpha:
+- ...
+
 20210501 - Gnoga V1.6a:
 
 - Update Makefile, settings.gpr and HISTORY.
